hphp/hack/test/typecheck/parenthesized_call_on_property_1.php.like_types.exp
File "parenthesized_call_on_property_1.php", line 6, characters 32-36:
Invalid assignment (Typing[4110])
File "parenthesized_call_on_property_1.php", line 6, characters 13-30:
Expected (function(): int)
File "parenthesized_call_on_property_1.php", line 6, characters 13-30:
But got dynamic because it is an unenforceable type
