hphp/hack/test/typecheck/parenthesized_call_on_property_1.php
<?hh // strict

class Foo {

  public function __construct(
    private (function (): int) $prop,
  ) {}

  public function bar(): int {
    return ($this->prop)();
  }
}
